--- a/Movielens Extract.ipynb
+++ b/Movielens Extract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "d9885be0",
    "metadata": {},
    "outputs": [],
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "6ba86f6b",
    "metadata": {},
    "outputs": [],
    "source": [
     "kaggle_metadata = pd.read_csv('movies_metadata.csv', low_memory=False)\n",
-    "ratings = pd.read_csv('ratings.csv')"
+    "ratings = pd.read_csv('../Movies-ETL_Orig/ratings.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "dce6fdb6",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ee689a76",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
        "4       1     1246     5.0  1425941556"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "36105618",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "444f88f8",
    "metadata": {},
    "outputs": [
@@ -654,28 +654,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10897</th>\n",
+       "      <th>37948</th>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>150000</td>\n",
-       "      <td>[{'id': 27, 'name': 'Horror'}, {'id': 35, 'nam...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[]</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>28349</td>\n",
-       "      <td>tt0225481</td>\n",
+       "      <td>252674</td>\n",
+       "      <td>tt2150139</td>\n",
        "      <td>en</td>\n",
-       "      <td>The Dead Hate the Living!</td>\n",
-       "      <td>When a renegade band of young filmmakers break...</td>\n",
+       "      <td>A Second Chance</td>\n",
+       "      <td>A young girl and her coach overcome adversity ...</td>\n",
        "      <td>...</td>\n",
-       "      <td>2000-02-08</td>\n",
+       "      <td>2013-01-01</td>\n",
        "      <td>0.0</td>\n",
        "      <td>90.0</td>\n",
        "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
        "      <td>Released</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>The Dead Hate the Living!</td>\n",
+       "      <td>A Second Chance</td>\n",
        "      <td>False</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>16.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -683,28 +683,25 @@
        "</div>"
       ],
       "text/plain": [
-       "       adult belongs_to_collection  budget  \\\n",
-       "10897  False                   NaN  150000   \n",
+       "       adult belongs_to_collection budget genres homepage      id    imdb_id  \\\n",
+       "37948  False                   NaN      0     []      NaN  252674  tt2150139   \n",
        "\n",
-       "                                                  genres homepage     id  \\\n",
-       "10897  [{'id': 27, 'name': 'Horror'}, {'id': 35, 'nam...      NaN  28349   \n",
-       "\n",
-       "         imdb_id original_language             original_title  \\\n",
-       "10897  tt0225481                en  The Dead Hate the Living!   \n",
+       "      original_language   original_title  \\\n",
+       "37948                en  A Second Chance   \n",
        "\n",
        "                                                overview  ... release_date  \\\n",
-       "10897  When a renegade band of young filmmakers break...  ...   2000-02-08   \n",
+       "37948  A young girl and her coach overcome adversity ...  ...   2013-01-01   \n",
        "\n",
        "      revenue runtime                          spoken_languages    status  \\\n",
-       "10897     0.0    90.0  [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "37948     0.0    90.0  [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
        "\n",
-       "       tagline                      title  video vote_average vote_count  \n",
-       "10897      NaN  The Dead Hate the Living!  False          3.9        9.0  \n",
+       "       tagline            title  video vote_average vote_count  \n",
+       "37948      NaN  A Second Chance  False          5.3       16.0  \n",
        "\n",
        "[1 rows x 24 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "aa9f6968",
    "metadata": {},
    "outputs": [
@@ -795,7 +792,7 @@
        "26024288  270896    71878     2.0  1257031858"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "41f45082",
    "metadata": {},
    "outputs": [
@@ -839,11 +836,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11547241</th>\n",
-       "      <td>119807</td>\n",
-       "      <td>1367</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1465164927</td>\n",
+       "      <th>21278301</th>\n",
+       "      <td>221064</td>\n",
+       "      <td>2105</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1086012166</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -851,10 +848,10 @@
       ],
       "text/plain": [
        "          userId  movieId  rating   timestamp\n",
-       "11547241  119807     1367     3.5  1465164927"
+       "21278301  221064     2105     3.0  1086012166"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "cc76f258",
    "metadata": {},
    "outputs": [
@@ -899,7 +896,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "52a98327",
    "metadata": {},
    "outputs": [
@@ -1144,7 +1141,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "97058129",
    "metadata": {},
    "outputs": [
@@ -1170,7 +1167,7 @@
        "Name: popularity, dtype: object"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "1297b868",
    "metadata": {},
    "outputs": [
@@ -1196,7 +1193,7 @@
        "Name: adult, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "c8f21f6c",
    "metadata": {},
    "outputs": [
@@ -1372,7 +1369,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "550efd1e",
    "metadata": {},
    "outputs": [],
@@ -1393,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "ce1711cb",
    "metadata": {},
    "outputs": [
@@ -1405,7 +1402,7 @@
        "Name: video, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "14e5a834",
    "metadata": {},
    "outputs": [
@@ -1437,7 +1434,7 @@
        "Name: video, Length: 45454, dtype: bool"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "03ba22d5",
    "metadata": {},
    "outputs": [],
@@ -1458,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "97524e60",
    "metadata": {},
    "outputs": [],
@@ -1470,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "b7080e32",
    "metadata": {},
    "outputs": [],
@@ -1480,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "8ef9f724",
    "metadata": {},
    "outputs": [
@@ -1516,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "id": "53d2176e",
    "metadata": {},
    "outputs": [
@@ -1537,7 +1534,7 @@
        "Name: timestamp, Length: 26024289, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1548,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "id": "928603c4",
    "metadata": {},
    "outputs": [],
@@ -1558,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "id": "ae951352",
    "metadata": {},
    "outputs": [
@@ -1576,7 +1573,7 @@
        "Name: rating, dtype: float64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1602,7 +1599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3a8460c",
+   "id": "72f27218",
    "metadata": {},
    "outputs": [],
    "source": []
