--- a/Wiki_Movies.ipynb
+++ b/Wiki_Movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 130,
    "id": "6bf1c330",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "from sqlalchemy import create_engine"
    ]
   },
   {
@@ -4085,7 +4086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b98bec37",
+   "id": "0209eb73",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4115,7 +4116,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "7961ae16",
+   "id": "1ed5047a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4126,7 +4127,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "119828a5",
+   "id": "78c6df8d",
    "metadata": {},
    "outputs": [
     {
@@ -4152,7 +4153,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "b104f49b",
+   "id": "b1cff5bd",
    "metadata": {},
    "outputs": [
     {
@@ -4178,7 +4179,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "abca652a",
+   "id": "3cec7557",
    "metadata": {},
    "outputs": [
     {
@@ -4354,7 +4355,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "4b80acd4",
+   "id": "e580b356",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4364,7 +4365,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "36e39249",
+   "id": "37e4dbe1",
    "metadata": {},
    "outputs": [
     {
@@ -4387,7 +4388,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "1fe26642",
+   "id": "a467c7b4",
    "metadata": {},
    "outputs": [
     {
@@ -4419,7 +4420,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "f8b0867b",
+   "id": "474bdccc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4429,7 +4430,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "25c56859",
+   "id": "74ce48a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4441,7 +4442,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "0343997b",
+   "id": "188721cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4451,7 +4452,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "3c22a6ed",
+   "id": "e0bd39a3",
    "metadata": {},
    "outputs": [
     {
@@ -4487,7 +4488,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "092ecc10",
+   "id": "f923fd3b",
    "metadata": {},
    "outputs": [
     {
@@ -4519,7 +4520,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "ce82c522",
+   "id": "4696998e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4529,7 +4530,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "9ca2a68e",
+   "id": "2863b92d",
    "metadata": {},
    "outputs": [
     {
@@ -4572,7 +4573,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "58e878ae",
+   "id": "59181fa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4582,7 +4583,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "b69f9e9d",
+   "id": "ddb94f4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4601,7 +4602,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "2e7570f1",
+   "id": "1d64b737",
    "metadata": {},
    "outputs": [
     {
@@ -4719,7 +4720,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "b25f7219",
+   "id": "d6898a68",
    "metadata": {},
    "outputs": [
     {
@@ -4850,7 +4851,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "4406acde",
+   "id": "69e134b3",
    "metadata": {},
    "outputs": [
     {
@@ -4924,7 +4925,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "27757820",
+   "id": "3d456a72",
    "metadata": {},
    "outputs": [
     {
@@ -4957,7 +4958,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "14aca660",
+   "id": "81ff9c90",
    "metadata": {},
    "outputs": [
     {
@@ -4990,7 +4991,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "9e7cf7f0",
+   "id": "1de73cf1",
    "metadata": {},
    "outputs": [
     {
@@ -5023,7 +5024,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "8d3f317e",
+   "id": "90bc5c75",
    "metadata": {},
    "outputs": [
     {
@@ -5056,7 +5057,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "d75c6809",
+   "id": "b92bd59c",
    "metadata": {},
    "outputs": [
     {
@@ -5089,7 +5090,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "b646f1cb",
+   "id": "70b67c15",
    "metadata": {},
    "outputs": [
     {
@@ -5206,7 +5207,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "ef6e2907",
+   "id": "8d27a06b",
    "metadata": {},
    "outputs": [
     {
@@ -5227,7 +5228,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "a17c5f10",
+   "id": "6dd498fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5237,7 +5238,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "9c7a879d",
+   "id": "c22b3784",
    "metadata": {},
    "outputs": [
     {
@@ -5700,7 +5701,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "01ef2cc9",
+   "id": "cfda21d1",
    "metadata": {},
    "outputs": [
     {
@@ -5753,7 +5754,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "f9fccd1b",
+   "id": "9fbf2dfb",
    "metadata": {},
    "outputs": [
     {
@@ -5785,7 +5786,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "971bf13c",
+   "id": "e2551f1f",
    "metadata": {},
    "outputs": [
     {
@@ -5824,7 +5825,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "34a59052",
+   "id": "bde0acd0",
    "metadata": {},
    "outputs": [
     {
@@ -5955,7 +5956,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "284237c8",
+   "id": "5bad691e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5965,7 +5966,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "5e147af0",
+   "id": "795c4ae1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5979,7 +5980,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "b1baa7d0",
+   "id": "98eac953",
    "metadata": {},
    "outputs": [
     {
@@ -6471,7 +6472,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "d511acbf",
+   "id": "1f3729c8",
    "metadata": {},
    "outputs": [
     {
@@ -6494,7 +6495,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "53e6c013",
+   "id": "2976a03d",
    "metadata": {},
    "outputs": [
     {
@@ -6516,7 +6517,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "4beec25a",
+   "id": "2a3a8752",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6531,7 +6532,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "b7004546",
+   "id": "f1823ff4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6556,7 +6557,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "775bf97b",
+   "id": "d8c9f0e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6566,7 +6567,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "f025ac12",
+   "id": "694d1ec8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6577,7 +6578,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "05d28fd1",
+   "id": "c6cba675",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6589,7 +6590,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "22a838c0",
+   "id": "6aa3fc70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6599,7 +6600,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "9fcb5a1a",
+   "id": "fd58e5a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6609,7 +6610,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "f8d5d949",
+   "id": "c8f05185",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6619,7 +6620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f720fae",
+   "id": "4076f218",
    "metadata": {},
    "outputs": [],
    "source": []
