--- a/Movielens Extract.ipynb
+++ b/Movielens Extract.ipynb
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "6ba86f6b",
    "metadata": {},
    "outputs": [],
    "source": [
     "kaggle_metadata = pd.read_csv('movies_metadata.csv', low_memory=False)\n",
-    "ratings = pd.read_csv('../Movies-ETL_Orig/ratings.csv')"
+    "ratings = pd.read_csv('../Movies-ETL/ratings.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "dce6fdb6",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "ee689a76",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
        "4       1     1246     5.0  1425941556"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "36105618",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "444f88f8",
    "metadata": {},
    "outputs": [
@@ -654,28 +654,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>37948</th>\n",
+       "      <th>1475</th>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
-       "      <td>[]</td>\n",
+       "      <td>[{'id': 18, 'name': 'Drama'}, {'id': 10769, 'n...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>252674</td>\n",
-       "      <td>tt2150139</td>\n",
-       "      <td>en</td>\n",
-       "      <td>A Second Chance</td>\n",
-       "      <td>A young girl and her coach overcome adversity ...</td>\n",
+       "      <td>38523</td>\n",
+       "      <td>tt0117359</td>\n",
+       "      <td>fr</td>\n",
+       "      <td>Ponette</td>\n",
+       "      <td>A four-year-old girl must come to terms with t...</td>\n",
        "      <td>...</td>\n",
-       "      <td>2013-01-01</td>\n",
+       "      <td>1996-09-10</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>[{'iso_639_1': 'fr', 'name': 'Français'}]</td>\n",
        "      <td>Released</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>A Second Chance</td>\n",
+       "      <td>Ponette</td>\n",
        "      <td>False</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>16.0</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>11.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -683,25 +683,28 @@
        "</div>"
       ],
       "text/plain": [
-       "       adult belongs_to_collection budget genres homepage      id    imdb_id  \\\n",
-       "37948  False                   NaN      0     []      NaN  252674  tt2150139   \n",
+       "      adult belongs_to_collection budget  \\\n",
+       "1475  False                   NaN      0   \n",
        "\n",
-       "      original_language   original_title  \\\n",
-       "37948                en  A Second Chance   \n",
+       "                                                 genres homepage     id  \\\n",
+       "1475  [{'id': 18, 'name': 'Drama'}, {'id': 10769, 'n...      NaN  38523   \n",
        "\n",
-       "                                                overview  ... release_date  \\\n",
-       "37948  A young girl and her coach overcome adversity ...  ...   2013-01-01   \n",
+       "        imdb_id original_language original_title  \\\n",
+       "1475  tt0117359                fr        Ponette   \n",
        "\n",
-       "      revenue runtime                          spoken_languages    status  \\\n",
-       "37948     0.0    90.0  [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "                                               overview  ... release_date  \\\n",
+       "1475  A four-year-old girl must come to terms with t...  ...   1996-09-10   \n",
        "\n",
-       "       tagline            title  video vote_average vote_count  \n",
-       "37948      NaN  A Second Chance  False          5.3       16.0  \n",
+       "     revenue runtime                           spoken_languages    status  \\\n",
+       "1475     0.0    97.0  [{'iso_639_1': 'fr', 'name': 'Français'}]  Released   \n",
+       "\n",
+       "      tagline    title  video vote_average vote_count  \n",
+       "1475      NaN  Ponette  False          7.5       11.0  \n",
        "\n",
        "[1 rows x 24 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "aa9f6968",
    "metadata": {},
    "outputs": [
@@ -792,7 +795,7 @@
        "26024288  270896    71878     2.0  1257031858"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "41f45082",
    "metadata": {},
    "outputs": [
@@ -836,22 +839,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>21278301</th>\n",
-       "      <td>221064</td>\n",
-       "      <td>2105</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1086012166</td>\n",
+       "      <th>8768813</th>\n",
+       "      <td>90462</td>\n",
+       "      <td>527</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>939981575</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          userId  movieId  rating   timestamp\n",
-       "21278301  221064     2105     3.0  1086012166"
+       "         userId  movieId  rating  timestamp\n",
+       "8768813   90462      527     5.0  939981575"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "cc76f258",
    "metadata": {},
    "outputs": [
@@ -896,7 +899,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "52a98327",
    "metadata": {},
    "outputs": [
@@ -1141,7 +1144,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "97058129",
    "metadata": {},
    "outputs": [
@@ -1167,7 +1170,7 @@
        "Name: popularity, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "1297b868",
    "metadata": {},
    "outputs": [
@@ -1193,7 +1196,7 @@
        "Name: adult, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
